--- a/Bio/bio 04_11_2022.md
+++ b/Bio/bio 04_11_2022.md
@@ -1,13 +1,14 @@
 Hi. My name is Viktor. I am 31. I`m from Russia, from Omsk. I have a wife and a son.
 
-After graduating from high school,i entered the college of civil aviation.
-After graduating from college, I got a job at an airport in the city Talakan, in Yakutia.
-How long i work in aviation? I did work in airport 7 years.
-while i worked as aviation engineer, i studied in Omsk Technical University as a programmer.
-After graduating university i got diplom bachalavr
-In two thousand twenty year i leave airport, becouse begin the COVID and crisis in aviation.
-From that time i work as professional java developer. I have expiriense in financial system. I made microservise
-enterprise level.
-My favorite techology for work, spring boot, relation data base postgresql, message brokker KAFKA. I have expiriense
-work with jira,cofluens,team city.
-My team developing directory for work with sale point now.
+After graduating from high school,I entered the Omsk Flight Technical College of Civil Aviation.
+After graduating from the college, I got a job at an airport in Talakan, in Yakutia.
+How long did I work in aviation? I worked in the airport for 7 years.
+While I worked as aviation engineer, I studied in Omsk Technical University as a software developer.
+After graduating the university, I got a bachelor in IT.
+
+In 2020 I left the airport, because COVID began and the crisis in aviation started.
+Since that time I have been working as professional java developer. I have experience in financial systems. I have been
+developing enterprise level microservises.
+My favorite technology for work, spring boot, relation data base postgresql, message brokker KAFKA. I have experience
+working with jira,cofluens,team city.
+My team is currently developing directory for sale points.
