--- a/Bio/bio 04_11_2022.md
+++ b/Bio/bio 04_11_2022.md
@@ -10,5 +10,5 @@ In 2020 I left the airport, because COVID began and the crisis in aviation start
 Since that time I have been working as professional java developer. I have experience in financial systems. I have been
 developing enterprise level microservises.
 My favorite technology for work, spring boot, relation data base postgresql, message brokker KAFKA. I have experience
-working with jira,cofluens,team city.
+working with jira,confluens,team city.
 My team is currently developing directory for sale points.
